style: ensure ui components align with design doc when on a mobile screen (breakpoint provided at 768px). includes making button smaller

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h2,
 h3 {
   margin: 0;
   padding: 0;
-  line-height: 1.25;
+  line-height: min(1.25, 1vh);
 }
 
 a {
@@ -46,7 +46,7 @@ header {
 .branding h2 {
   color: var(--yellow-500);
   font-weight: 700;
-  font-size: 1.875rem;
+  font-size: min(1.875rem, 5vh);
   line-height: 1;
   margin-left: -20px;
 }
@@ -54,7 +54,7 @@ header {
 h2>.smaller {
   color: var(--blue-900);
   font-weight: 600;
-  font-size: 1.25rem;
+  font-size: min(1.25rem, 2.5vh);
 }
 
 .logo>img {
@@ -70,7 +70,6 @@ main {
   /* grid */
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-  gap: 24px;
   align-items: start;
 }
 
@@ -80,24 +79,23 @@ main {
   flex-direction: column;
   align-items: start;
   gap: 20px;
-  text-wrap: pretty;
+  text-wrap: balance;
 }
 
 hgroup {
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  gap: 12px;
+  gap: 1vw;
 }
 
 h3 {
-  font-size: 1.75rem;
+  font-size: clamp(1.75vw, 1.75rem, 20px);
   font-weight: normal;
 }
 
 h1 {
-  font-size: 3.5rem;
+  font-size: clamp(3.5rem, 48px, 12vw);
 }
 
 p {
@@ -141,7 +139,37 @@ main>figure {
 }
 
 main img {
-  max-width: 100%;
+  /* max-width: 100%; */
+  height: 100%;
+}
+
+/* mobile breakpoint */
+@media only screen and (max-width: 768px) {
+  main {
+    padding: 40px 0;
+  }
+
+  .text-container {
+    gap: 4px;
+  }
+
+  hgroup {
+    gap: 16px;
+  }
+
+  h1 {
+    font-size: 3rem;
+  }
+
+  button {
+    font-size: 1rem;
+    padding: 8px 24px;
+  }
+
+  main img {
+    height: auto;
+    width: 100%;
+  }
 }
 
 /* DIALOG */
